--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -165,29 +165,128 @@
 
   </div>
 
-  <div> <label>show first tab (ng-if): <input type=checkbox ng-model=$ctrl.firstTabShown
-        ng-init=\"$ctrl.firstTabShown=true;\" /> </label> <label>Disable first tab (ng-disabled): <input type=checkbox
-        ng-model=$ctrl.firstTabDisabled ng-init=\"$ctrl.firstTabDisabled=false;\" /> </label> <label>show second tab
-      (ng-if): <input type=checkbox ng-model=$ctrl.secondTabShown ng-init=\"$ctrl.secondTabShown=false;\" /> </label>
-    <label>show third tab (ng-show): <input type=checkbox ng-model=$ctrl.thirdTabShown
-        ng-init=\"$ctrl.thirdTabShown=true;\" /> </label> <label>Dynamic Title: <input ng-model=$ctrl.title /> </label>
-    <label>Dynamic Content: <input ng-model=$ctrl.content /> </label>
+  <div>
     <div class=tabset-container>
       <lw-tab-set>
         <lw-tab ng-if=$ctrl.firstTabShown ng-disabled=$ctrl.firstTabDisabled>
           <lw-tab-header> {{$ctrl.title}} </lw-tab-header>
           <lw-tab-content>
-            <p> Tab content #1 </p> <strong>Dynamic content:</strong>
-            <div> {{$ctrl.content}} </div>
+            <table class="generic-module-layout">
+              <tbody>
+                <tr>
+                  <td class="flexible-content">
+
+                    <div class="linngrid slickgrid" id="pwpByItemGrid"
+                      style="width: 100%; height: 200px; outline: 0px; position: relative;"></div>
+
+                    <table class="pull-right" style="min-width:300px;">
+                      <tbody>
+                        <tr>
+                          <td class="totalsLabel">Paid:</td>
+                          <td style="text-align: right"> {{ paid }} {{ orderCurrency }}</td>
+                        </tr>
+                        <tr>
+                          <td class="totalsLabel">Outstanding:</td>
+                          <td style="text-align: right"> {{ outstanding }} {{ orderCurrency }}</td>
+                        </tr>
+                        <tr>
+                          <td class="totalsLabel"><b>Selected To Pay:</b></td>
+                          <td style="text-align: right"><b> {{ selectedToPay }} {{ orderCurrency }}</b></td>
+                        </tr>
+                        <tr>
+                          <td class="totalsLabel">Your balance is:</td>
+                          <td style="text-align: right"> {{ balance }} {{ orderCurrency }}</td>
+                        </tr>
+                        <tr>
+                          <td ng-if="topupAccount" class="totalsLabel">Click here to top-up your account</td>
+                        </tr>
+
+                        <tr>
+                          <td colspan="2" style="border-top: solid 1px #000"></td>
+                        </tr>
+
+                        <tr>
+                          <td></td>
+                          <td>
+                            <div class="pull-right">
+                              <button class="btn btn-primary" ng-click="PayByItems()">Pay</button>
+                            </div>
+                          </td>
+                        </tr>
+                      </tbody>
+                    </table>
+
+                  </td>
+                </tr>
+              </tbody>
+            </table>
           </lw-tab-content>
         </lw-tab>
-        <lw-tab ng-if=$ctrl.secondTabShown>
+        <lw-tab ng-if=$ctrl.hideTabByAmount>
           <lw-tab-header> Tab #2 </lw-tab-header>
-          <lw-tab-content> Tab content #2 </lw-tab-content>
-        </lw-tab>
-        <lw-tab ng-show=$ctrl.thirdTabShown>
-          <lw-tab-header> Tab #3 </lw-tab-header>
-          <lw-tab-content> Content #3 </lw-tab-content>
+          <lw-tab-content>
+            <table class="generic-module-layout">
+              <tbody>
+                <tr>
+                  <td class="flexible-content">
+                    <div class="linngrid" id="pwpByAmountGrid"
+                      style="width: 100%; height: 200px; outline: 0px; position: relative;"></div>
+
+                    <table class="pull-right" style="min-width:300px;">
+                      <tbody>
+                        <tr>
+                          <td class="totalsLabel">Paid:</td>
+                          <td style="text-align: right"> {{ paid }} {{ orderCurrency }}</td>
+                        </tr>
+                        <tr>
+                          <td class="totalsLabel">Outstanding:</td>
+                          <td style="text-align: right"> {{ outstanding }} {{ orderCurrency }}</td>
+                        </tr>
+                        <tr>
+                          <td class="totalsLabel"><b>Amount To Pay, {{ orderCurrency }}: </b></td>
+                          <td style="text-align: right">
+                            <!-- <b><input type="text" class="input-small ng-valid ng-not-empty ng-dirty ng-valid-parse ng-touched" ng-decimal-number="" ng-decimal-number-allow-negatives="false" ng-model="amountToPay"> {{ orderCurrency }}</b> -->
+                            <form name="form">
+                              <!-- <label for="input">Input field:</label> -->
+                              <input type="number" name="input" min="{{min}}" max="{{outstanding}}"
+                                ng-model="amountToPay" required step="0.01" />
+                              <!-- <div ng-messages="form.input.$error" style="color: #ff0000" role="alert" ng-if="form.input.$dirty">
+                                <div ng-message="required">This field is required</div>
+                                <div ng-message="min">This field must be at least {{min}}.</div>
+                                <div ng-message="max">This field must be at max {{max}}.</div>
+                                <div ng-message="number">Not a valid number.</div>
+                              </div> -->
+                            </form>
+                          </td>
+                        </tr>
+                        <tr>
+                          <td class="totalsLabel">Your balance is:</td>
+                          <td style="text-align: right"> {{ balance }} {{ orderCurrency }}</td>
+                        </tr>
+                        <tr>
+                          <td ng-if="topupAccount" class="totalsLabel">Click here to top-up your account</td>
+                        </tr>
+                        <tr>
+                          <td colspan="2" style="border-top: solid 1px #000"></td>
+                        </tr>
+
+                        <tr>
+                          <td></td>
+                          <td>
+                            <div class="pull-right">
+                              <button class="btn btn-primary" ng-click="payByAmount()">Pay</button>
+                            </div>
+                          </td>
+                        </tr>
+
+                      </tbody>
+                    </table>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+
+          </lw-tab-content>
         </lw-tab>
       </lw-tab-set>
     </div>
