--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -6,7 +6,7 @@
     </div>
   </div>
 
-  <section>
+  <!-- <section>
     <table class="generic-module-layout tabset" lw-tst="tab_set" modern-layout="" tab-loaded="tabLoaded">
       <tbody>
         <tr>
@@ -97,17 +97,10 @@
                             <tr>
                               <td class="totalsLabel"><b>Amount To Pay, {{ orderCurrency }}: </b></td>
                               <td style="text-align: right">
-                                <!-- <b><input type="text" class="input-small ng-valid ng-not-empty ng-dirty ng-valid-parse ng-touched" ng-decimal-number="" ng-decimal-number-allow-negatives="false" ng-model="amountToPay"> {{ orderCurrency }}</b> -->
+                                
                                 <form name="form">
-                                  <!-- <label for="input">Input field:</label> -->
                                   <input type="number" name="input" min="{{min}}" max="{{outstanding}}"
                                     ng-model="amountToPay" required step="0.01" />
-                                  <!-- <div ng-messages="form.input.$error" style="color: #ff0000" role="alert" ng-if="form.input.$dirty">
-                                    <div ng-message="required">This field is required</div>
-                                    <div ng-message="min">This field must be at least {{min}}.</div>
-                                    <div ng-message="max">This field must be at max {{max}}.</div>
-                                    <div ng-message="number">Not a valid number.</div>
-                                  </div> -->
                                 </form>
                               </td>
                             </tr>
@@ -152,8 +145,8 @@
 
       </lw-tab>
     </lw-tab-set>
-  </section>
-
+  </section> -->
+  <label>show first tab (ng-if): <input type=checkbox ng-model="showTabByItems" ng-init=\"showTabByItems = true;\"/> </label>
   <div>
     <h2>Payment History</h2>
     <div class="linngrid" id="pwpPaymentsGrid" style="width: 100%; height: 140px; outline: 0px; position: relative;">
@@ -169,7 +162,7 @@
     <div class=tabset-container>
       <lw-tab-set>
         <lw-tab ng-if="showTabByItems">
-          <lw-tab-header> {{$ctrl.title}} </lw-tab-header>
+          <lw-tab-header> By Item </lw-tab-header>
           <lw-tab-content>
             <table class="generic-module-layout">
               <tbody>
@@ -222,8 +215,8 @@
             </table>
           </lw-tab-content>
         </lw-tab>
-        <lw-tab ng-if=$ctrl.showTabByAmount>
-          <lw-tab-header> Tab #2 </lw-tab-header>
+        <lw-tab ng-if="showTabByAmount">
+          <lw-tab-header> By Amount </lw-tab-header>
           <lw-tab-content>
             <table class="generic-module-layout">
               <tbody>
@@ -248,7 +241,7 @@
                             <!-- <b><input type="text" class="input-small ng-valid ng-not-empty ng-dirty ng-valid-parse ng-touched" ng-decimal-number="" ng-decimal-number-allow-negatives="false" ng-model="amountToPay"> {{ orderCurrency }}</b> -->
                             <form name="form">
                               <!-- <label for="input">Input field:</label> -->
-                              <input type="number" name="input" min="{{min}}" max="{{outstanding}}"
+                              <input type="number" name="input" max="{{outstanding}}"
                                 ng-model="amountToPay" required step="0.01" />
                               <!-- <div ng-messages="form.input.$error" style="color: #ff0000" role="alert" ng-if="form.input.$dirty">
                                 <div ng-message="required">This field is required</div>
