--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -146,7 +146,7 @@
       </lw-tab>
     </lw-tab-set>
   </section> -->
-  <label>show first tab (ng-if): <input type=checkbox ng-model="showTabByItems" ng-init=\"showTabByItems = true;\"/> </label>
+  <label>show first tab (ng-if): <input type=checkbox ng-model="showTabByItems"> </label>
   <div>
     <h2>Payment History</h2>
     <div class="linngrid" id="pwpPaymentsGrid" style="width: 100%; height: 140px; outline: 0px; position: relative;">
