--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -164,7 +164,7 @@
   <div>
     <div class=tabset-container>
       <lw-tab-set>
-        <lw-tab ng-disabled="!showTabByItems" >
+        <lw-tab ng-disabled="hideTabByItems" >
           <lw-tab-header> By Item </lw-tab-header>
           <lw-tab-content>
             <table class="generic-module-layout">
@@ -218,8 +218,8 @@
             </table>
           </lw-tab-content>
         </lw-tab>
-        <lw-tab ng-disabled="!showTabByAmount">
-          <lw-tab-header> By Amount </lw-tab-header>
+        <lw-tab ng-disabled="hideTabByAmount">
+          <lw-tab-header ng-click="showTabByAmount()"> By Amount </lw-tab-header>
           <lw-tab-content>
             <table class="generic-module-layout">
               <tbody>
