--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -223,7 +223,7 @@
                       <tbody>
                         <tr>
                           <td class="totalsLabel">Paid:</td>
-                          <td style="text-align: right"> {{ paid }} {{ orderCurrency }}</td>
+                          <td style="text-align: right"> {{ paidAmount }} {{ orderCurrency }}</td>
                         </tr>
                         <tr>
                           <td class="totalsLabel">Outstanding:</td>
