--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -216,7 +216,7 @@
               <tbody>
                 <tr>
                   <td class="flexible-content">
-                    <div class="linngrid" id="pwpByAmountGrid"
+                    <div class="linngrid slickgrid" id="pwpByAmountGrid"
                       style="width: 100%; height: 200px; outline: 0px; position: relative;"></div>
 
                     <table class="pull-right" style="min-width:300px;">
