--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -227,7 +227,7 @@
                         </tr>
                         <tr>
                           <td class="totalsLabel">Outstanding:</td>
-                          <td style="text-align: right"> {{ outstanding }} {{ orderCurrency }}</td>
+                          <td style="text-align: right"> {{ outstandingAmount }} {{ orderCurrency }}</td>
                         </tr>
                         <tr>
                           <td class="totalsLabel"><b>Amount To Pay, {{ orderCurrency }}: </b></td>
