--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -6,6 +6,12 @@
     </div>
   </div>
 
+  <div ng-if="unauthorized">
+    <div id="unauthorizedOverlay">
+      <p><h1>You need to login with Paynoneer first (Apps - Pay with Payoneer</h1></p>
+    </div>
+  </div>
+
   <!-- <section>
     <table class="generic-module-layout tabset" lw-tst="tab_set" modern-layout="" tab-loaded="tabLoaded">
       <tbody>
