--- a/Views/simple/views/PayWithPayoneer.css
+++ b/Views/simple/views/PayWithPayoneer.css
@@ -87,11 +87,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    color: rgba(130, 130, 130, 0.5);
-    font-size: 50px;
-    text-align: center;
-    line-height: 100px;
-    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.3);
+    backdrop-filter: blur(5px);
 }
 
 #unauthorizedOverlay {
