--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -6,9 +6,22 @@
     </div>
   </div>
 
+  
+
   <div ng-if="unauthorized">
     <div id="unauthorizedOverlay">
-      <p><h1>You need to login with Paynoneer first (Apps - Pay with Payoneer</h1></p>
+      <div class="outer" style="height:100px; width: 100%">
+        <span class="inner">
+          <span class="inner">
+            <p>
+              <h1>You need to login with Paynoneer first (Apps - Pay with Payoneer)</h1>
+              </p><br>
+              <p>
+              <h4>(Apps - Pay with Payoneer)</h4>
+              </p>
+          </span>
+        </span>
+      </div>
     </div>
   </div>
 
