--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -14,10 +14,10 @@
         <span class="inner">
           <span class="inner">
             <p>
-              <h1>You need to login with Paynoneer first (Apps - Pay with Payoneer)</h1>
+              <h1>You need to login with Paynoneer first</h1>
               </p><br>
               <p>
-              <h4>(Apps - Pay with Payoneer)</h4>
+              <h2>(Apps - Pay with Payoneer)</h2>
               </p>
           </span>
         </span>
