--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -13,12 +13,11 @@
       <div class="outer" style="height:100px; width: 100%">
         <span class="inner">
           <span class="inner">
-            <p>
-              <h1>You need to login with Paynoneer first</h1>
-              </p><br>
-              <p>
-              <h2>(Apps - Pay with Payoneer)</h2>
-              </p>
+            
+              You need to login with Paynoneer first
+              <br>
+              (Apps - Pay with Payoneer)
+              
           </span>
         </span>
       </div>
