--- a/Views/simple/views/PayWithPayoneer.css
+++ b/Views/simple/views/PayWithPayoneer.css
@@ -88,6 +88,8 @@
     top: 0;
     left: 0;
     backdrop-filter: blur(5px);
+    justify-content: center;
+    align-items: center;
 }
 
 #unauthorizedOverlay {
