--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -14,7 +14,7 @@
         <span class="inner">
           <span class="inner">
             
-              You need to login with Paynoneer first
+              <h4>You need to login with Paynoneer first</h4>
               <br>
               (Apps - Pay with Payoneer)
               
