--- a/Views/simple/views/PayWithPayoneer.css
+++ b/Views/simple/views/PayWithPayoneer.css
@@ -97,6 +97,9 @@
 }
 
 .outer {
+    position: absolute;
+    top: 50%;
+    left: 0;
     display: flex;
     justify-content: center;
     align-items: center;
