--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -12,10 +12,7 @@
     <div id="unauthorizedOverlay">
       <div class="outer" style="height:100px; width: 100%">
         <span class="inner">
-            
-              <h2>You need to login with Paynoneer first</h2>
-              <br>
-              (Apps - Pay with Payoneer)
+              <p><h2>You need to login with Paynoneer first</h2></p>
           </span>
       </div>
     </div>
