--- a/Views/simple/views/PayWithPayoneer.css
+++ b/Views/simple/views/PayWithPayoneer.css
@@ -98,10 +98,13 @@
 
 .outer {
     position: absolute;
-    top: 50%;
+    top: 40%;
     left: 0;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+.inner {
+    background-color: gainsboro;
 }
 
