--- a/Views/simple/views/PayWithPayoneer.css
+++ b/Views/simple/views/PayWithPayoneer.css
@@ -105,6 +105,11 @@
     align-items: center;
 }
 .inner {
-    background-color: gainsboro;
+    width: 100%;
+    text-align: center;
+}
+
+.inner .h2 {
+    color: orangered;
 }
 
