--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -12,7 +12,8 @@
     <div id="unauthorizedOverlay">
       <div class="outer" style="height:100px; width: 100%">
         <span class="inner">
-              <p><h2>You need to login with Paynoneer first</h2></p>
+              <p><h2>You need to login with Paynoneer first</h2></p><br>
+              <p><h2>(Apps - Pay with Payoneer</h2></p>
           </span>
       </div>
     </div>
