--- a/Views/simple/views/RemoveOutOfStock.html
+++ b/Views/simple/views/RemoveOutOfStock.html
@@ -1,306 +1,5 @@
-<div ng-controller="PayWithPayoneerView">
-
-  <div ng-if="ShowError">
-    <div class="alert alert-warning">
-      <strong>Error</strong> There was an error loading some of the data required for this page. Please try again later.
-    </div>
-  </div>
+<div ng-controller="RemoveOutOfStockView">
 
   
-
-  <div ng-if="unauthorized">
-    <div id="unauthorizedOverlay">
-      <div class="outer" style="height:100px; width: 100%">
-        <span class="inner">
-              <p><h2>You need to login with Paynoneer first</h2></p><br>
-              <p><h2>(Apps - Pay with Payoneer)</h2></p>
-          </span>
-      </div>
-    </div>
-  </div>
-
-  <!-- <section>
-    <table class="generic-module-layout tabset" lw-tst="tab_set" modern-layout="" tab-loaded="tabLoaded">
-      <tbody>
-        <tr>
-          <td class="static-content header-menu-content">
-            <ul class="nav nav-tabs" ng-class="{'nav-justified' : justified === 'true'}"
-              ng-hide="tabSet.shouldHideHeader();">
-              <li class="active" data-index="0" lw-tst="tab_ByItem"><a>
-                  <lw-tab-header lw-tst="tab_ByItem" class="active">By Item</lw-tab-header>
-                </a></li>
-              <li data-index="1" lw-tst="tab_ByAmount" class=""><a>
-                  <lw-tab-header lw-tst="tab_ByAmount" class="" ng-click="showTabByAmount()">By Amount</lw-tab-header>
-                </a></li>
-            </ul>
-          </td>
-        </tr>
-        <tr>
-          <td class="flexible-content">
-            <div class="tab-content">
-              <div class="tab-pane position-relative active" data-index="0">
-                <table class="generic-module-layout">
-                  <tbody>
-                    <tr>
-                      <td class="flexible-content">
-
-                        <div class="linngrid slickgrid" id="pwpByItemGrid"
-                          style="width: 100%; height: 200px; outline: 0px; position: relative;"></div>
-
-                        <table class="pull-right" style="min-width:300px;">
-                          <tbody>
-                            <tr>
-                              <td class="totalsLabel">Paid:</td>
-                              <td style="text-align: right"> {{ paid }} {{ orderCurrency }}</td>
-                            </tr>
-                            <tr>
-                              <td class="totalsLabel">Outstanding:</td>
-                              <td style="text-align: right"> {{ outstanding }} {{ orderCurrency }}</td>
-                            </tr>
-                            <tr>
-                              <td class="totalsLabel"><b>Selected To Pay:</b></td>
-                              <td style="text-align: right"><b> {{ selectedToPay }} {{ orderCurrency }}</b></td>
-                            </tr>
-                            <tr>
-                              <td class="totalsLabel">Your balance is:</td>
-                              <td style="text-align: right"> {{ balance }} {{ orderCurrency }}</td>
-                            </tr>
-                            <tr>
-                              <td ng-if="topupAccount" class="totalsLabel">Click here to top-up your account</td>
-                            </tr>
-
-                            <tr>
-                              <td colspan="2" style="border-top: solid 1px #000"></td>
-                            </tr>
-
-                            <tr>
-                              <td></td>
-                              <td>
-                                <div class="pull-right">
-                                  <button class="btn btn-primary" ng-click="PayByItems()">Pay</button>
-                                </div>
-                              </td>
-                            </tr>
-                          </tbody>
-                        </table>
-
-                      </td>
-                    </tr>
-                  </tbody>
-                </table>
-              </div>
-              <div ng-disabled="true" class="tab-pane position-relative" data-index="1">
-                <table class="generic-module-layout">
-                  <tbody>
-                    <tr>
-                      <td class="flexible-content">
-                        <div class="linngrid" id="pwpByAmountGrid"
-                          style="width: 100%; height: 200px; outline: 0px; position: relative;"></div>
-
-                        <table class="pull-right" style="min-width:300px;">
-                          <tbody>
-                            <tr>
-                              <td class="totalsLabel">Paid:</td>
-                              <td style="text-align: right"> {{ paid }} {{ orderCurrency }}</td>
-                            </tr>
-                            <tr>
-                              <td class="totalsLabel">Outstanding:</td>
-                              <td style="text-align: right"> {{ outstanding }} {{ orderCurrency }}</td>
-                            </tr>
-                            <tr>
-                              <td class="totalsLabel"><b>Amount To Pay, {{ orderCurrency }}: </b></td>
-                              <td style="text-align: right">
-                                
-                                <form name="form">
-                                  <input type="number" name="input" min="{{min}}" max="{{outstanding}}"
-                                    ng-model="amountToPay" required step="0.01" />
-                                </form>
-                              </td>
-                            </tr>
-                            <tr>
-                              <td class="totalsLabel">Your balance is:</td>
-                              <td style="text-align: right"> {{ balance }} {{ orderCurrency }}</td>
-                            </tr>
-                            <tr>
-                              <td ng-if="topupAccount" class="totalsLabel">Click here to top-up your account</td>
-                            </tr>
-                            <tr>
-                              <td colspan="2" style="border-top: solid 1px #000"></td>
-                            </tr>
-
-                            <tr>
-                              <td></td>
-                              <td>
-                                <div class="pull-right">
-                                  <button class="btn btn-primary" ng-click="payByAmount()">Pay</button>
-                                </div>
-                              </td>
-                            </tr>
-
-                          </tbody>
-                        </table>
-                      </td>
-                    </tr>
-                  </tbody>
-                </table>
-              </div>
-            </div>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-    <lw-tab-set lw-tst="tab_set" modern-layout="" tab-loaded="tabLoaded">
-      <lw-tab class="active" data-index="0">
-
-      </lw-tab>
-
-      <lw-tab ng-disabled="true" data-index="1">
-
-      </lw-tab>
-    </lw-tab-set>
-  </section> -->
-  
-
-
-
-  
-
-  <div>
-    <div class=tabset-container>
-      <lw-tab-set>
-        <lw-tab ng-if="!hideTabByItems" ng-disabled="hideTabByItems" >
-          <lw-tab-header> By Item </lw-tab-header>
-          <lw-tab-content>
-            <table class="generic-module-layout">
-              <tbody>
-                <tr>
-                  <td class="flexible-content">
-
-                    <div class="linngrid slickgrid" id="pwpByItemGrid"
-                      style="width: 100%; height: 200px; outline: 0px; position: relative;"></div>
-
-                    <table class="pull-right" style="min-width:300px;">
-                      <tbody>
-                        <tr>
-                          <td class="totalsLabel">Paid:</td>
-                          <td style="text-align: right"> {{ paid }} {{ orderCurrency }}</td>
-                        </tr>
-                        <tr>
-                          <td class="totalsLabel">Outstanding:</td>
-                          <td style="text-align: right"> {{ outstanding }} {{ orderCurrency }}</td>
-                        </tr>
-                        <tr>
-                          <td class="totalsLabel"><b>Selected To Pay:</b></td>
-                          <td style="text-align: right"><b> {{ selectedToPay }} {{ orderCurrency }}</b></td>
-                        </tr>
-                        <tr>
-                          <td class="totalsLabel">Your balance is:</td>
-                          <td style="text-align: right"> {{ balance }} {{ orderCurrency }}</td>
-                        </tr>
-                        <tr>
-                          <td ng-if="topupAccount" class="totalsLabel">Click here to top-up your account</td>
-                        </tr>
-
-                        <tr>
-                          <td colspan="2" style="border-top: solid 1px #000"></td>
-                        </tr>
-
-                        <tr>
-                          <td></td>
-                          <td>
-                            <div class="pull-right">
-                              <button class="btn btn-primary" ng-click="PayByItems()">Pay</button>
-                            </div>
-                          </td>
-                        </tr>
-                      </tbody>
-                    </table>
-
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-          </lw-tab-content>
-        </lw-tab>
-        <lw-tab ng-disabled="hideTabByAmount">
-          <lw-tab-header ng-click="showTabByAmount()"> By Amount </lw-tab-header>
-          <lw-tab-content>
-            <table class="generic-module-layout">
-              <tbody>
-                <tr>
-                  <td class="flexible-content">
-                    <div class="linngrid slickgrid" id="pwpByAmountGrid"
-                      style="width: 100%; height: 200px; outline: 0px; position: relative;"></div>
-
-                    <table class="pull-right" style="min-width:300px;">
-                      <tbody>
-                        <tr>
-                          <td class="totalsLabel">Paid:</td>
-                          <td style="text-align: right"> {{ paidAmount }} {{ orderCurrency }}</td>
-                        </tr>
-                        <tr>
-                          <td class="totalsLabel">Outstanding:</td>
-                          <td style="text-align: right"> {{ outstandingAmount }} {{ orderCurrency }}</td>
-                        </tr>
-                        <tr>
-                          <td class="totalsLabel"><b>Amount To Pay, {{ orderCurrency }}: </b></td>
-                          <td style="text-align: right">
-                            <!-- <b><input type="text" class="input-small ng-valid ng-not-empty ng-dirty ng-valid-parse ng-touched" ng-decimal-number="" ng-decimal-number-allow-negatives="false" ng-model="amountToPay"> {{ orderCurrency }}</b> -->
-                            <form name="form">
-                              <!-- <label for="input">Input field:</label> -->
-                              <input class="input-small" type="number" name="input" min="0" max="{{outstandingAmount}}"
-                                ng-model="amountToPay" required step="0.01" />
-                              <!-- <div ng-messages="form.input.$error" style="color: #ff0000" role="alert" ng-if="form.input.$dirty">
-                                <div ng-message="required">This field is required</div>
-                                <div ng-message="min">This field must be at least {{min}}.</div>
-                                <div ng-message="max">This field must be at max {{max}}.</div>
-                                <div ng-message="number">Not a valid number.</div>
-                              </div> -->
-                            </form>
-                          </td>
-                        </tr>
-                        <tr>
-                          <td class="totalsLabel">Your balance is:</td>
-                          <td style="text-align: right"> {{ balance }} {{ orderCurrency }}</td>
-                        </tr>
-                        <tr>
-                          <td ng-if="topupAccount" class="totalsLabel">Click here to top-up your account</td>
-                        </tr>
-                        <tr>
-                          <td colspan="2" style="border-top: solid 1px #000"></td>
-                        </tr>
-
-                        <tr>
-                          <td></td>
-                          <td>
-                            <div class="pull-right">
-                              <button class="btn btn-primary" ng-click="payByAmount()">Pay</button>
-                            </div>
-                          </td>
-                        </tr>
-
-                      </tbody>
-                    </table>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-
-          </lw-tab-content>
-        </lw-tab>
-      </lw-tab-set>
-    </div>
-  </div>
-
-  <div>
-    <h2>Payment History</h2>
-    <div class="linngrid" id="pwpPaymentsGrid" style="width: 100%; height: 140px; outline: 0px; position: relative;">
-    </div>
-
-    <div ng-if="!paymentsExist">
-      <h5>No payments found for this PO.</h5>
-    </div>
-
-  </div>
 
 </div>
