--- a/Views/simple/views/RemoveOutOfStock.html
+++ b/Views/simple/views/RemoveOutOfStock.html
@@ -1,5 +1,7 @@
 <div ng-controller="RemoveOutOfStockView">
 
-  
+  <div class="pull-right">
+    <button class="btn btn-primary" ng-click="removeOutOfStock()">Remove</button>
+  </div>
 
 </div>
