--- a/Views/simple/views/RemoveOutOfStock.html
+++ b/Views/simple/views/RemoveOutOfStock.html
@@ -1,6 +1,13 @@
 <div ng-controller="RemoveOutOfStockView">
 
-  <div class="linngrid" id="roosItemsGrid" style="width: 100%; height: 140px; outline: 0px; position: relative;"></div>
+  <table>
+    <tr ng-repeat="i in itemsToRemove">
+      <td>{{ i.ChannelSKU }}</td>
+      <td>{{ i.Quantity }}</td>
+    </tr>
+  </table>
+
+  <!-- <div class="linngrid" id="roosItemsGrid" style="width: 100%; height: 140px; outline: 0px; position: relative;"></div> -->
 
   <div class="pull-right">
     <button class="btn btn-primary" ng-click="removeOutOfStock()">Remove</button>
