--- a/Views/simple/views/RemoveOutOfStock.html
+++ b/Views/simple/views/RemoveOutOfStock.html
@@ -1,11 +1,28 @@
 <div ng-controller="RemoveOutOfStockView">
 
   <table>
-    <tr ng-repeat="i in itemsToRemove">
-      <td>{{ i.ChannelSKU }}</td>
-      <td>{{ i.Quantity }}</td>
-    </tr>
+
   </table>
+
+  <div style="width: 100%; min-height: 100px; height:auto" class="itemsTableContainer">
+    <table lw-tst="grid2" class="lw-table lw-table-fixed order-items" style="table-layout: auto !important">
+      <thead>
+        <tr>
+          <th style="min-width: 160px;">SKU</th>
+          <th style="min-width: 100px">Quantity</th>
+          <th style="min-width: 62px">Due in</th>
+        </tr>
+      </thead>
+      <tbody>'
+        <tr ng-repeat="i in itemsToRemove">
+          <td>{{ i.ChannelSKU }}</td>
+          <td>{{ i.Quantity }}</td>
+          <td></td>
+        </tr>
+      </tbody>
+
+    </table>
+  </div>
 
   <!-- <div class="linngrid" id="roosItemsGrid" style="width: 100%; height: 140px; outline: 0px; position: relative;"></div> -->
 
