--- a/Views/simple/views/RemoveOutOfStock.html
+++ b/Views/simple/views/RemoveOutOfStock.html
@@ -31,6 +31,10 @@
 
   <div class="pull-right">
     <button class="btn btn-primary" ng-click="removeOutOfStock()">Remove</button>
+    <button lw-tst="btn_Cancel" class="btn func" ng-click="cancel()">Cancel</button>
+
+    <input type="button" class="btn" handle-click="true" key="YES" value="Yes" lw-tst="btn_YES">
+    <input type="button" class="btn" handle-click="true" key="NO" value="No" lw-tst="btn_NO">
   </div>
 
 </div>
